カテゴリ―について個別更新ではなく一括更新にAPI処理を見直し
